--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </div> 
         <table id="tabela" class="table table-dark w-50 m-auto mt-3 text-center">
-            <thead>
+            <thead class="">
                 <th scope="col">id</th>
                 <th scope="col">Produto</th>
                 <th scope="col">Preço</th>
